src/objects/DRDW_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Gap__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contingency_Plan__c</fullName>
        <label>Contingency Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Risk Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact_fo_Timing__c</fullName>
        <label>Impact on Timing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_of_Regulatory_Approval__c</fullName>
        <label>Impact of Regulatory Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Project_Timeline_Activity__c</fullName>
        <label>Impacted Project Timeline Activity</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Risk_Impacts__c</fullName>
        <label>Milestone Risk Impacts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DTG</fullName>
                </value>
                <value>
                    <fullName>DTA</fullName>
                </value>
                <value>
                    <fullName>DP1</fullName>
                </value>
                <value>
                    <fullName>DP2</fullName>
                </value>
                <value>
                    <fullName>Submission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mitigation_Plan__c</fullName>
        <label>Mitigation Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probability_of_Occurring__c</fullName>
        <label>Probability of Occurring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>DRDW_Project__c</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Details__c</fullName>
        <label>Risk Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Project_Business_Unit__c</fullName>
        <label>Project Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Owner__c</fullName>
        <label>Risk Functional Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>ERL</fullName>
                </value>
                <value>
                    <fullName>Global Operations</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>PVS&amp;T</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <label>Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Mitigated</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>	
    <label>DRDW Risk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RSK-{0000}</displayFormat>
        <label>Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>DRDW_Risk_Share__c</fullName>
        <label>Risk Share</label>
    </sharingReasons>
</CustomObject>